@@ -1,4 +1,4 @@
-function writeFullRecipeForAcquisition(obj)
+function writeFullRecipeForAcquisition(obj,dirName)
     % Write recipe to disk and name it according to the sample ID and today's date
     % 
     % recipe.writeFullRecipeForAcquisition
@@ -11,10 +11,17 @@ function writeFullRecipeForAcquisition(obj)
     % was performed. The purpose of this method is to create a recipe file that can be
     % used to run, re-run, or re-start a specific acquisition.
     %
+    % 
+    % Inputs
+    % dirName - By default the recipe is written to the current directory. If dirName
+    %           is defined, the recipe is written here instead. 
     %
     % Also see:
     %  recipe.saveRecipe 
 
+    if nargin<2
+        dirName=pwd;
+    end
 
     theseFields = ['Acquisition';properties(obj)]; %Acquisition (which contains the acquisition start time) is hidden so is added explicitly here
 
@@ -29,5 +36,5 @@ function writeFullRecipeForAcquisition(obj)
     %We call tile pattern to ensure that the recipe parameters are up to date. This may no longer be needed.
     obj.tilePattern; %TODO: ensure we no longer need this explicit call here. 
 
-    BakingTray.yaml.WriteYaml(recipeFname,thisRecipe);
+    BakingTray.yaml.WriteYaml(fullfile(dirName,recipeFname),thisRecipe);
 
